[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data_gym"
version = "0.1.0"
description = "Data Cleaning & Wrangling environment for OpenEnv — trains agents to transform messy real-world data"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
server = "data_gym.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["data_gym", "data_gym.server", "data_gym.server.tasks"]
package-dir = { "data_gym" = ".", "data_gym.server" = "server", "data_gym.server.tasks" = "server/tasks" }
